2010-03-10 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 2968246 ] connect2 builds unnecessary struct

2010-03-09 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* instance.c:
	[ 2966804 ] setObjectPath returns uninitialized pointer

2010-03-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, sfcBroker.c:
	[ 2961422 ] Single HTTP Adapter

2010-03-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am in test subdirs
	[ 2963746 ] Incorrect license in test makefiles

2010-03-04  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* configure.ac, test/pywbem/Makefile.am, test/pywbem/check_pywbem.py,
	  test/pywbem/ecn_interop.py:
	[ 2963601 ] pywbem tests

2010-03-01 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* args.c, array.c, constClass.c, instance.c, internalProvider.c, objectpath.c:
	[ 2948647 ] getObjectPath may dereference NULL pointer

2010-02-24  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, sfcBroker.c:
	[ 2958167 ] Remove USE_THREADS sections of httpAdapter

2010-02-19  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopServerProvider.c:
	[ 2949454 ] Memory leak in ServerProviderInitInstances()

2009-02-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 2950773 ] Leak in indCIMXMLHandler.c

2010-02-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerMgr.c:
	[ 2952912 ] resultSockets variable is not used threadsafe 
	(patch by Till Steinbach )

2010-02-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* internalProvider.c:
	[ 2952616 ] internalProvider is not Threadsafe
	(patch by Till Steinbach )

2010-02-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am:
	[ 2948812 ] footprint.pl missing from release tarball

2010-02-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 2946885 ] BEAM errors found in cimXmlGen

	* classProvider.c:
	[ 2946890 ] classProvider may try to closedir(NULL)
