@@ -1,3 +1,9 @@
+2010-03-12 Sean Swehla <smswehla@linux.vnet.ibm.com>
+
+	* value.c:
+	[ 2968198 ] CMPI_chars in sfcb - see #2967257
+	(patch by Klaus Kaempf)
+
 2010-03-10 Sean Swehla <smswehla@linux.vnet.ibm.com>
 
 	* cimcClientSfcbLocal.c:
